--- a/landing/index.html
+++ b/landing/index.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="MissPolin - Производитель модной одежды" />
     <meta property="og:description" content="Онлайн-магазин одежды" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="images/tild3134-3936-4138-a665-356339623033__-__resize__504x__logo0000.png" />
+    <meta property="og:image" content="images/rea.jpg" />
     <meta property="fb:app_id" content="257953674358265" />
     <meta name="format-detection" content="telephone=no" />
     <meta http-equiv="x-dns-prefetch-control" content="on">
