--- a/aclient/land.html
+++ b/aclient/land.html
@@ -17,6 +17,10 @@
     <meta name="description" content="Онлайн-магазин одежды" />
     <link rel="canonical" href="mag">
     <link rel="shortcut icon" href="images/tild3932-6536-4537-b737-393733366236__faviconmisspolin.ico" type="image/x-icon" />
+    <meta name="keywords" content="одежда, polin, компания, miss, продукция, швейный, одеть ребенка, модная одежда, одежда, женская">
+    <meta name="description" content="Швейная компания Miss Polin занимается пошивом эксклюзивной детской и подростковой одежды для девочек. Miss Polin завоевала репутацию надежного партнера и поставщика качественных товаров. Работа дружного коллектива нашей компании направлена на создание не только модных и интересных моделей, но и удобных, а также  практичных вещей.  ">
+    <meta name="robots" content="all">
+    <meta name="autor" content="art-group.pro">
     <!-- Assets -->
     <link rel="stylesheet" href="css/tilda-grid-3.0.min.css" type="text/css" media="all" />
     <link rel="stylesheet" href="css/tilda-blocks-2.12.css?t=1553513000" type="text/css" media="all" />
