--- a/aclient/land.html
+++ b/aclient/land.html
@@ -38,6 +38,20 @@
     <script type="text/javascript">
         window.dataLayer = window.dataLayer || [];
     </script>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript" >
+        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+            m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+        ym(53387752, "init", {
+            clickmap:true,
+            trackLinks:true,
+            accurateTrackBounce:true
+        });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/53387752" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138137633-1"></script>
     <script>
@@ -47,21 +61,7 @@
 
         gtag('config', 'UA-138137633-1');
     </script>
-    <script type="text/javascript">
-        if ((/bot|google|yandex|baidu|bing|msn|duckduckbot|teoma|slurp|crawler|spider|robot|crawling|facebook/i.test(navigator.userAgent)) === false && typeof(sessionStorage) != 'undefined' && sessionStorage.getItem('visited') !== 'y') {
-            var style = document.createElement('style');
-            style.type = 'text/css';
-            style.innerHTML = '@media screen and (min-width: 980px) {.t-records {opacity: 0;}.t-records_animated {-webkit-transition: opacity ease-in-out .2s;-moz-transition: opacity ease-in-out .2s;-o-transition: opacity ease-in-out .2s;transition: opacity ease-in-out .2s;}.t-records.t-records_visible {opacity: 1;}}';
-            document.getElementsByTagName('head')[0].appendChild(style);
-            $(document).ready(function() {
-                $('.t-records').addClass('t-records_animated');
-                setTimeout(function() {
-                    $('.t-records').addClass('t-records_visible');
-                    sessionStorage.setItem('visited', 'y');
-                }, 400);
-            });
-        }
-    </script>
+
 </head>
 
 <body class="t-body" style="margin:0;">
