--- a/aclient/land.html
+++ b/aclient/land.html
@@ -101,7 +101,7 @@
                         <div class="t-sociallinks">
                             <div class="t-sociallinks__wrapper">
                                 <div class="t-sociallinks__item">
-                                    <a href="https://www.google.com" target="_blank">
+                                    <a href="https://www.facebook.com/misspolin.brand" target="_blank">
                                         <svg class="t-sociallinks__svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="30px" height="30px" viewBox="0 0 48 48" enable-background="new 0 0 48 48" xml:space="preserve">
                                                 <desc>Facebook</desc>
                                                 <path style="fill:#ffffff;" d="M47.761,24c0,13.121-10.638,23.76-23.758,23.76C10.877,47.76,0.239,37.121,0.239,24c0-13.124,10.638-23.76,23.764-23.76C37.123,0.24,47.761,10.876,47.761,24 M20.033,38.85H26.2V24.01h4.163l0.539-5.242H26.2v-3.083c0-1.156,0.769-1.427,1.308-1.427h3.318V9.168L26.258,9.15c-5.072,0-6.225,3.796-6.225,6.224v3.394H17.1v5.242h2.933V38.85z" />
@@ -109,7 +109,7 @@
                                     </a>
                                 </div>
                                 <div class="t-sociallinks__item">
-                                    <a href="Contacts" target="_blank">
+                                    <a href="https://www.instagram.com/misspolin.brand/" target="_blank">
                                         <svg class="t-sociallinks__svg" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="30px" height="30px" viewBox="0 0 30 30" xml:space="preserve">
                                                 <desc>Instagram</desc>
                                                 <path style="fill:#ffffff;" d="M15,11.014 C12.801,11.014 11.015,12.797 11.015,15 C11.015,17.202 12.802,18.987 15,18.987 C17.199,18.987 18.987,17.202 18.987,15 C18.987,12.797 17.199,11.014 15,11.014 L15,11.014 Z M15,17.606 C13.556,17.606 12.393,16.439 12.393,15 C12.393,13.561 13.556,12.394 15,12.394 C16.429,12.394 17.607,13.561 17.607,15 C17.607,16.439 16.444,17.606 15,17.606 L15,17.606 Z"></path>
@@ -1527,7 +1527,7 @@
                                 </div>
                                 <div class="t-input-group t-input-group_ph" data-input-lid="1495810410810">
                                     <div class="t-input-block">
-                                        <input type="tel" name="Phone" class="t-input js-tilda-rule " value="" placeholder="Телефон" data-tilda-rule="phone" pattern="[0-9]*" style="color:#000000; border:1px solid #c9c9c9; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px;" required>
+                                        <input type="tel" name="Phone" class="t-input js-tilda-rule " value="" placeholder="Телефон"  style="color:#000000; border:1px solid #c9c9c9; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px;" required>
                                         <div class="t-input-error"></div>
                                     </div>
                                 </div>
@@ -4288,7 +4288,7 @@
                     </div>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__885081631474451816576' data-elem-id='1474451816576' data-elem-type='text' data-field-top-value="364" data-field-top-res-960-value="339" data-field-top-res-640-value="329" data-field-top-res-480-value="282" data-field-top-res-320-value="234" data-field-left-value="21" data-field-left-res-960-value="0" data-field-left-res-640-value="50" data-field-left-res-480-value="36" data-field-left-res-320-value="39" data-field-width-value="260" data-field-width-res-960-value="220" data-field-width-res-640-value="540" data-field-width-res-480-value="400" data-field-width-res-320-value="240" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="">
-                    <div class='tn-atom' field='tn_text_1474451816576'>Заходите к нам на сайт misspolin.ru</div>
+                    <div class='tn-atom' field='tn_text_1474451816576'>Заходите к нам на сайт misspolin.com</div>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__885081631474550903558' data-elem-id='1474550903558' data-elem-type='text' data-field-top-value="364" data-field-top-res-960-value="339" data-field-top-res-640-value="640" data-field-top-res-480-value="563" data-field-top-res-320-value="485" data-field-left-value="321" data-field-left-res-960-value="240" data-field-left-res-640-value="50" data-field-left-res-480-value="36" data-field-left-res-320-value="40" data-field-width-value="260" data-field-width-res-960-value="220" data-field-width-res-640-value="540" data-field-width-res-480-value="400" data-field-width-res-320-value="240" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="">
                     <div class='tn-atom' field='tn_text_1474550903558'>После формирования заказа, мы связываемся с Вами</div>
@@ -4300,7 +4300,7 @@
                     <div class='tn-atom' field='tn_text_1474550942853'>Оплачиваете заказ</div>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__885081631474550945491' data-elem-id='1474550945491' data-elem-type='text' data-field-top-value="421" data-field-top-res-960-value="393" data-field-top-res-640-value="963" data-field-top-res-480-value="847" data-field-top-res-320-value="785" data-field-left-value="621" data-field-left-res-960-value="480" data-field-left-res-640-value="50" data-field-left-res-480-value="46" data-field-left-res-320-value="42" data-field-width-value="270" data-field-width-res-960-value="220" data-field-width-res-640-value="540" data-field-width-res-480-value="400" data-field-width-res-320-value="240" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="">
-                    <div class='tn-atom' field='tn_text_1474550945491'><em>Оплату можно производить как наличными, так и через банк. Можно также расплатиться картой VISA или электронным кошельком.</em></div>
+                    <div class='tn-atom' field='tn_text_1474550945491'><em>Оплату можно производить как наличными, так и денежным переводом.</em></div>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__885081631474550961837' data-elem-id='1474550961837' data-elem-type='text' data-field-top-value="364" data-field-top-res-960-value="339" data-field-top-res-640-value="1234" data-field-top-res-480-value="1066" data-field-top-res-320-value="1011" data-field-left-value="921" data-field-left-res-960-value="720" data-field-left-res-640-value="50" data-field-left-res-480-value="46" data-field-left-res-320-value="42" data-field-width-value="260" data-field-width-res-960-value="240" data-field-width-res-640-value="540" data-field-width-res-480-value="400" data-field-width-res-320-value="240" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="">
                     <div class='tn-atom' field='tn_text_1474550961837'>Осуществляем доставку товара по указанному Вами адресу</div>
@@ -5355,7 +5355,7 @@
                             </div>
                             <div class="t-input-group t-input-group_ph" data-input-lid="1494867612478">
                                 <div class="t-input-block">
-                                    <input type="tel" name="Phone" class="t-input js-tilda-rule " value="" placeholder="Телефон" data-tilda-rule="phone" pattern="[0-9]*" style="color:#000000; border:1px solid #000000; " required>
+                                    <input type="tel" name="Phone" class="t-input js-tilda-rule " value="" placeholder="Телефон"  style="color:#000000; border:1px solid #000000; " required>
                                     <div class="t-input-error"></div>
                                 </div>
                             </div>
@@ -6378,19 +6378,19 @@
                 <div class='t396__elem tn-elem tn-elem__909897441475147678114' data-elem-id='1475147678114' data-elem-type='text' data-field-top-value="106" data-field-top-res-960-value="104" data-field-top-res-640-value="269" data-field-top-res-480-value="268" data-field-top-res-320-value="644" data-field-left-value="920" data-field-left-res-960-value="731" data-field-left-res-640-value="331" data-field-left-res-480-value="251" data-field-left-res-320-value="11" data-field-width-value="260" data-field-width-res-960-value="220" data-field-width-res-320-value="300" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="">
                     <div class='tn-atom' field='tn_text_1475147678114'>+996 777 14 42 66
                         <br>+996 778 86 90 76
-                        <br>Misspolinkg@gmail.com</div>
+                        <br>misspolinkg@mail.ru</div>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__909897441475160083840' data-elem-id='1475160083840' data-elem-type='image' data-field-top-value="75" data-field-top-res-640-value="75" data-field-top-res-480-value="76" data-field-top-res-320-value="75" data-field-left-value="20" data-field-left-res-640-value="90" data-field-left-res-480-value="10" data-field-left-res-320-value="10" data-field-width-value="160" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="">
-                    <a class='tn-atom' href="https://www.google.com"> <img class='tn-atom__img t-img' data-original='http://misspolin.com/landing/images/tild3439-6333-4335-b631-656436663831__logo0000.png' imgfield='tn_img_1475160083840'> </a>
+                    <a class='tn-atom' href="http://misspolin.com"> <img class='tn-atom__img t-img' data-original='http://misspolin.com/landing/images/tild3439-6333-4335-b631-656436663831__logo0000.png' imgfield='tn_img_1475160083840'> </a>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__909897441475160165682' data-elem-id='1475160165682' data-elem-type='image' data-field-top-value="134" data-field-top-res-640-value="134" data-field-top-res-480-value="135" data-field-left-value="32" data-field-left-res-640-value="100" data-field-left-res-480-value="20" data-field-width-value="25" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="">
-                    <a class='tn-atom' href="https://www.google.com"> <img class='tn-atom__img t-img' data-original='http://misspolin.com/landing/images/tild6639-3366-4631-b239-646338376234__image4.svg' imgfield='tn_img_1475160165682'> </a>
+                    <a class='tn-atom' href="https://www.facebook.com/misspolin.brand"> <img class='tn-atom__img t-img' data-original='http://misspolin.com/landing/images/tild6639-3366-4631-b239-646338376234__image4.svg' imgfield='tn_img_1475160165682'> </a>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__909897441475160346203' data-elem-id='1475160346203' data-elem-type='image' data-field-top-value="134" data-field-top-res-640-value="134" data-field-top-res-480-value="135" data-field-left-value="64" data-field-left-res-640-value="132" data-field-left-res-480-value="52" data-field-width-value="25" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="">
-                    <a class='tn-atom' href="https://www.google.com"> <img class='tn-atom__img t-img' data-original='http://misspolin.com/landing/images/tild3534-6639-4739-a430-623035626130__image15.svg' imgfield='tn_img_1475160346203'> </a>
+                    <a class='tn-atom' href="https://www.instagram.com/misspolin.brand/"> <img class='tn-atom__img t-img' data-original='http://misspolin.com/landing/images/tild3534-6639-4739-a430-623035626130__image15.svg' imgfield='tn_img_1475160346203'> </a>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__909897441475160436130' data-elem-id='1475160436130' data-elem-type='text' data-field-top-value="185" data-field-top-res-960-value="185" data-field-top-res-640-value="185" data-field-top-res-480-value="176" data-field-top-res-320-value="186" data-field-left-value="30" data-field-left-res-960-value="40" data-field-left-res-640-value="100" data-field-left-res-480-value="20" data-field-left-res-320-value="10" data-field-width-value="120" data-field-width-res-960-value="210" data-field-width-res-640-value="220" data-field-width-res-480-value="220" data-field-width-res-320-value="300" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="">
-                    <div class='tn-atom' field='tn_text_1475160436130'>© 2018 MissPolin</div>
+                    <div class='tn-atom' field='tn_text_1475160436130'>© 2019 MissPolin</div>
                 </div>
                 <div class='t396__elem tn-elem tn-elem__909897441551611002581' data-elem-id='1551611002581' data-elem-type='text' data-field-top-value="200" data-field-top-res-960-value="190" data-field-top-res-640-value="350" data-field-top-res-480-value="350" data-field-top-res-320-value="730" data-field-left-value="920" data-field-left-res-960-value="730" data-field-left-res-640-value="330" data-field-left-res-480-value="250" data-field-left-res-320-value="10" data-field-width-value="160" data-field-axisy-value="top" data-field-axisx-value="left" data-field-container-value="grid" data-field-topunits-value="" data-field-leftunits-value="" data-field-heightunits-value="" data-field-widthunits-value="">
                     <div class='tn-atom' field='tn_text_1551611002581'>Made by Daseron</div>
@@ -6413,6 +6413,7 @@
     document.getElementById('refer1').value = location.search.split('refer=')[1]
     document.getElementById('refer2').value = location.search.split('refer=')[1]
 </script>
+<script>!function(e,t,d,s,a,n,c){e[a]={},e[a].date=(new Date).getTime(),n=t.createElement(d),c=t.getElementsByTagName(d)[0],n.type="text/javascript",n.async=!0,n.src=s,c.parentNode.insertBefore(n,c)}(window,document,"script","https://misspolincom.push.world/embed.js","pw"),pw.websiteId="1acbb1439d5dfe9685f018ca03edcd7a8d7213991ab9971c29ce6652d787b0d8";</script>
 </body>
 
 </html>
